Fix dark mode colors.

--- a/src/global.css
+++ b/src/global.css
@@ -17,8 +17,8 @@
     --bg-color: #000000;
     --primary-color: #f3f4f6;
     --text-color: #f9f9f9;
-    --text-secondary-color: #d1d5db;
-    --text-muted-color: #9ca3af;
+    --text-secondary-color: #62676e;
+    --text-muted-color: #8b919c;
     --border-color: #c6c7c8;
   }
 }
